--- a/Flappy Naail/Base.lproj/Main.storyboard
+++ b/Flappy Naail/Base.lproj/Main.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5023" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="FNViewController" sceneMemberID="viewController">
@@ -15,16 +16,180 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="MainMenu.png" translatesAutoresizingMaskIntoConstraints="NO" id="jej-h9-1fc">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <animations/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iMF-7P-pEQ">
+                                <rect key="frame" x="104" y="356" width="106" height="57"/>
+                                <animations/>
+                                <state key="normal">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="xnB-Hs-i69" kind="modal" modalTransitionStyle="crossDissolve" id="JI4-NT-HO3"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Highscore: " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Ll-zp-LnD">
+                                <rect key="frame" x="104" y="301" width="106" height="23"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="HighScore" destination="5Ll-zp-LnD" id="YQz-Jk-HEU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
+        <!--Game-->
+        <scene sceneID="dkV-Dl-0ec">
+            <objects>
+                <viewController id="xnB-Hs-i69" customClass="Game" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="GTm-H4-ibb"/>
+                        <viewControllerLayoutGuide type="bottom" id="JHr-ZG-jfP"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="N3g-F1-tU9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Rectangular Marquee.png" translatesAutoresizingMaskIntoConstraints="NO" id="gm0-yG-mes">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <animations/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="BirdUp.png" translatesAutoresizingMaskIntoConstraints="NO" id="3vt-6f-d08">
+                                <rect key="frame" x="29" y="264" width="40" height="40"/>
+                                <animations/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uhS-tp-gSl">
+                                <rect key="frame" x="3" y="0.0" width="320" height="568"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="26"/>
+                                <state key="normal">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="StartGame:" destination="xnB-Hs-i69" eventType="touchUpInside" id="jOE-JI-loD"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="GetReady.png" translatesAutoresizingMaskIntoConstraints="NO" id="ANd-FR-HTT">
+                                <rect key="frame" x="43" y="128" width="240" height="128"/>
+                                <animations/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="pipe.png" translatesAutoresizingMaskIntoConstraints="NO" id="B40-zG-5Fu">
+                                <rect key="frame" x="213" y="223" width="53" height="500"/>
+                                <animations/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="floor.png" translatesAutoresizingMaskIntoConstraints="NO" id="gfS-kZ-hSo">
+                                <rect key="frame" x="0.0" y="444" width="320" height="124"/>
+                                <animations/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="pipe.png" translatesAutoresizingMaskIntoConstraints="NO" id="U5I-bO-N7n">
+                                <rect key="frame" x="213" y="-308" width="53" height="500"/>
+                                <animations/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="tap.png" translatesAutoresizingMaskIntoConstraints="NO" id="m3q-NV-IDY">
+                                <rect key="frame" x="-3" y="0.0" width="323" height="568"/>
+                                <animations/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="borderbottom.png" translatesAutoresizingMaskIntoConstraints="NO" id="cOE-Qp-d5g">
+                                <rect key="frame" x="0.0" y="444" width="326" height="19"/>
+                                <animations/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Game Over.png" translatesAutoresizingMaskIntoConstraints="NO" id="7zx-f1-JnX">
+                                <rect key="frame" x="32" y="27" width="262" height="138"/>
+                                <animations/>
+                            </imageView>
+                            <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cH3-rj-az4">
+                                <rect key="frame" x="-3" y="110" width="320" height="294"/>
+                                <animations/>
+                                <color key="tintColor" red="0.57564113451086962" green="0.57564113451086962" blue="0.57564113451086962" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="164"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="0.25" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <color key="shadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Score.png" translatesAutoresizingMaskIntoConstraints="NO" id="1XQ-qR-rCT">
+                                <rect key="frame" x="76" y="125" width="169" height="90"/>
+                                <animations/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Replay Button.png" translatesAutoresizingMaskIntoConstraints="NO" id="VBh-ee-FvY">
+                                <rect key="frame" x="166" y="350" width="100" height="54"/>
+                                <animations/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FRC-bL-jcg">
+                                <rect key="frame" x="165" y="350" width="101" height="51"/>
+                                <animations/>
+                                <state key="normal">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="xnB-Hs-i69" kind="modal" modalTransitionStyle="crossDissolve" id="c8B-bg-NOb"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Home Button.png" translatesAutoresizingMaskIntoConstraints="NO" id="AFb-XV-Xp5">
+                                <rect key="frame" x="43" y="350" width="99" height="53"/>
+                                <animations/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nlH-23-3cU">
+                                <rect key="frame" x="43" y="350" width="101" height="51"/>
+                                <animations/>
+                                <state key="normal">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="vXZ-lx-hvc" kind="modal" modalTransitionStyle="crossDissolve" id="ZdA-Tb-7EL"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="Bird" destination="3vt-6f-d08" id="eqd-Nc-0zP"/>
+                        <outlet property="Bottom" destination="cOE-Qp-d5g" id="4hY-Mm-v0D"/>
+                        <outlet property="Exit" destination="FRC-bL-jcg" id="stp-Hc-r3N"/>
+                        <outlet property="ExitImage" destination="VBh-ee-FvY" id="6pi-ga-5bi"/>
+                        <outlet property="GameOver" destination="7zx-f1-JnX" id="fS8-Yc-bG6"/>
+                        <outlet property="GetStarted" destination="ANd-FR-HTT" id="mjN-83-b6T"/>
+                        <outlet property="Home" destination="nlH-23-3cU" id="X3E-OK-ahG"/>
+                        <outlet property="HomeImage" destination="AFb-XV-Xp5" id="WSe-n7-OX0"/>
+                        <outlet property="Score" destination="1XQ-qR-rCT" id="OHP-05-toI"/>
+                        <outlet property="ScoreLabel" destination="cH3-rj-az4" id="ifV-CG-z9S"/>
+                        <outlet property="StartGame" destination="uhS-tp-gSl" id="fGb-Zk-3Cz"/>
+                        <outlet property="Tap" destination="m3q-NV-IDY" id="u7x-GP-1C7"/>
+                        <outlet property="TunnelBottom" destination="B40-zG-5Fu" id="Xp2-EK-UH7"/>
+                        <outlet property="TunnelTop" destination="U5I-bO-N7n" id="8FX-bj-S0S"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ecl-rK-jkd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="524" y="36"/>
+        </scene>
     </scenes>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
-    </simulatedMetricsContainer>
+    <resources>
+        <image name="BirdUp.png" width="144" height="216"/>
+        <image name="Game Over.png" width="288" height="144"/>
+        <image name="GetReady.png" width="288" height="144"/>
+        <image name="Home Button.png" width="217" height="124"/>
+        <image name="MainMenu.png" width="289" height="512"/>
+        <image name="Rectangular Marquee.png" width="289" height="512"/>
+        <image name="Replay Button.png" width="217" height="124"/>
+        <image name="Score.png" width="288" height="144"/>
+        <image name="borderbottom.png" width="362" height="22"/>
+        <image name="floor.png" width="362" height="145"/>
+        <image name="pipe.png" width="50" height="100"/>
+        <image name="tap.png" width="289" height="512"/>
+    </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="JI4-NT-HO3"/>
+    </inferredMetricsTieBreakers>
 </document>
